--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Manrope:wght@200..800&family=Podkova:wght@400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- banner part start -->
     <section class="banner">
        
         <div class="banneroverly">
@@ -22,6 +23,25 @@
         </div>
         </div>
     </section>
+     <!-- banner part end-->
+
+
+      <!-- supplier part start -->
+    <section class="supplier">
+        <div class="container">
+            <div class="box">
+                <div class="col-lg-5">
+                <h2>The biggest supplier on the country</h2>
+            </div>
+            <div class="col-lg-7">
+                <p>It is a long established fact that a reader will be distracted by the readable content of 
+                    a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution.</p>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- supplier part end -->
 
     
 </body> 
