--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
     </section>
     <!-- supplier part end -->
 
+     <!-- image part start -->
+
+     <section class="images">
+      <div class="box">
+        <div class="img1">
+          <img  src="./image/image1.png" alt="">
+      </div>
+      <div class="img2">
+          <img  src="./image/image2.png" alt="">
+      </div>
+      <div class="img3">
+          <img  src="./image/image3.png" alt="">
+      </div>
+      <div class="img4">
+          <img  src="./image/image4.png" alt="">
+      </div>
+       
+      </div>
+     </section>
+
     
 </body> 
 </html>
